Add find_orb binary to artifacts 2

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -97,4 +97,4 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: windows-bin
-        path: find_orb.exe
+        path: fo.exe
